<resources>
	
	<string name="app_name">Mr. Water</string>
	
	<string name="hello_world">Hello world!</string>
	<string name="action_settings">Einstellungen</string>
	<string name="action_add_product">Produkt hinzufügen</string>
	
	<string name="drawer_open">Navigationsmenü öffnen</string>
	<string name="drawer_close">Navigationsmenü schließen</string>
	<string name="navigation">Navigationsmenü</string>
	
	<string name="editText_hint_name">Name</string>
	<string name="editText_hint_water">Wasser</string>
	<string name="editText_hint_tags">Tags</string>
	
	<string name="editText_hint_search">Produkt eingeben...</string>
	<string name="button_search_product">Suchen</string>
	
	<string name="textView_filter">Filter:</string>
	<string name="button_reset">Zurücksetzen</string>
	
	<string name="editText_errorMessage">Das Feld darf nicht leer sein.</string>
	
	<string name="cab_delete">Einträge löschen</string>
	<string name="cab_change">Eintrag ändern</string>
	<string name="cab_checked_string">ausgewählt</string>
	
	<string name="dialog_title">Listeneintrag ändern</string>
	<string name="dialog_2_title">Listeneintrag hinzufügen</string>
	<string name="dialog_title_water">Wasser:</string>
	<string name="dialog_title_name">Name:</string>
	<string name="dialog_title_tags">Tags:</string>
	<string name="dialog_title_barcode">Barcode:</string>
	<string name="dialog_button_positive">Ändern</string>
	<string name="dialog_2_button_positive">Erstellen</string>
	<string name="dialog_button_negative">Abbrechen</string>
	
	<string name="info_text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</string>
	
	<string-array name="fragments_string_array">
		<item>Produktliste</item>
		<item>Barcode scannen</item>
		<item>Informationen</item>
	</string-array>
	
	<string name="product_name">Name:</string>
	<string name="product_water">Wasser:</string>
	<string name="product_tags">Tags:</string>
	<string name="product_barcode">Barcode:</string>
	<string name="similar_products">Ähnliche Produkte:</string>
	
</resources>
