<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/apk/tools"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	android:paddingBottom="@dimen/activity_vertical_margin"
	tools:context=".MainActivity">

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:id="@+id/linearLayout_search"
		android:focusableInTouchMode="true">

		<EditText
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:hint="@string/editText_hint_search"
			android:id="@+id/editText_search"
			android:layout_weight="1"/>

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/button_search_product"
			android:id="@+id/button_search_product"/>

	</LinearLayout>

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:id="@+id/linearLayout_filter"
		android:focusableInTouchMode="true"
		android:visibility="gone">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/textView_filter"
			android:id="@+id/textView_filter"
			android:layout_weight="1"
			android:textAppearance="?android:attr/textAppearanceMedium"/>

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/button_reset"
			android:id="@+id/button_reset_search"/>

	</LinearLayout>

	<ListView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:id="@+id/listView_products"
		android:layout_gravity="center_horizontal"/>

</LinearLayout>

